--- a/OIDCServer/Views/Consent/_ScopeListItemView.cshtml
+++ b/OIDCServer/Views/Consent/_ScopeListItemView.cshtml
@@ -8,6 +8,13 @@
                id="scopes_@Model.Name"
                checked="@Model.Checked"
                disabled="@Model.Required"/>
+
+        @if (Model.Required)
+        {
+            <input type="hidden" name="ScopeConsented" value="@Model.Name"/>
+        }
+
+
         <strong>@Model.Name</strong>
         @if (Model.Emphasize)
         {
